# linear-cli

./: .gitignore  AGENTS.md  README.md  bookmark.md  pyproject.toml  ruff.toml
design/: multi-workspace-profiles.md
src/linear_cli/: cli.py  linear_operations.graphql  profiles.py  snapshot.py  validation.py
tests/: test_linear_validation.py  test_profiles.py  test_snapshot.py  test_teams.py
