[project]
name = "linear-cli"
version = "0.1.0"
description = "Audited GraphQL write path into the team's Linear workspace"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.15",
    "pydantic>=2",
]

[dependency-groups]
dev = ["basedpyright>=1.28.0", "ruff>=0.14.11", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linear = "linear_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/linear_cli"]
include = [
    "src/linear_cli/py.typed",
    "src/linear_cli/linear_operations.graphql",
]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
